--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "deep-equal": "^1.0.1",
+    "deepcopy": "^2.0.0",
     "jsonwebtoken": "^8.5.0",
     "jwks-rsa": "^1.4.0",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
+    "mongodb": "^3.2.3",
     "request": "^2.88.0",
     "rxjs": "^6.3.3",
     "underscore": "^1.9.1"
